# api-bricks-sdk

./: .gitignore  LICENSE  README.md
.github/workflows/: coinapi-exchange-rates-api-historical-rest-openapi-to-sdk.yaml  coinapi-exchange-rates-api-realtime-rest-openapi-to-sdk.yaml  coinapi-indexes-api-rest-openapi-to-sdk.yaml  coinapi-market-data-api-rest-csharp-publish-nuget.yml  coinapi-market-data-api-rest-java-publish-github.yml  coinapi-market-data-api-rest-python-publish-pypi.yml  coinapi-market-data-api-ws-csharp-publish-nuget.yml  coinapi-market-data-api-ws-java-publish-github.yml  csharp-rest-nuget.yml  csharp-ws-nuget.yml  finfeedapi-currencies-api-historical-rest-openapi-to-sdk.yaml  finfeedapi-currencies-api-realtime-rest-openapi-to-sdk.yaml  finfeedapi-sec-api-openapi-to-sdk.yaml  finfeedapi-sec-api-rest-openapi-to-sdk.yaml  finfeedapi-sec-api-rest-publish-pypi-legacy.yaml  finfeedapi-sec-api-rest-publish-pypi.yaml  finfeedapi-stock-api-openapi-to-sdk.yaml  finfeedapi-stock-api-rest-openapi-to-sdk.yaml  generate-sec-api-python-sdk.yaml  java-rest-github.yml  java-ws-github.yml  pypi-api-bricks-sec-api-sdk-legacy.yaml  pypi-api-bricks-sec-api-sdk.yaml  python-rest-nuget.yml  reusable-openapi-to-sdk.yaml
coinapi/exchange-rates-api-historical/spec/: openapi.json  openapi.yaml
coinapi/exchange-rates-api-realtime/spec/: openapi.json  openapi.yaml
coinapi/exchange-rates-api-rest-historical/sdk-config/: csharp.yaml  python.yaml
coinapi/exchange-rates-api-rest-historical/spec/: exchange-rates-api-historical.json  openapi.json  openapi.yaml
coinapi/exchange-rates-api-rest-realtime/sdk-config/: apex.yaml  cpp-restsdk.yaml  csharp.yaml  groovy.yaml  python.yaml
coinapi/exchange-rates-api-rest-realtime/spec/: openapi.json  openapi.yaml
coinapi/exchange-rates-api/spec/: exchange-rates-api-historical.json  exchange-rates-api-historical.yaml  exchange-rates-api-realtime.json  exchange-rates-api-realtime.yaml
coinapi/flat-files-api-processing-samples/limitbook_full_to_snapshot_50/: limitbook_full_to_snapshot_50.py
coinapi/indexes-api-rest/sdk-config/: bash.yaml  cpp-tizen.yaml  csharp.yaml  perl.yaml  python.yaml
coinapi/indexes-api-rest/spec/: coinapi-indexes-rest.json  openapi.json  openapi.yaml
coinapi/market-data-api-rest/sdk-config/: csharp.yaml  go.yaml  python.yaml
coinapi/market-data-api-rest/sdk/c/: CMakeLists.txt  README.md
coinapi/market-data-api-rest/sdk/c/.openapi-generator/: FILES
coinapi/market-data-api-rest/sdk/c/api/: ExchangeRatesAPI.c  ExchangeRatesAPI.h  ExternalMetricsAPI.c  ExternalMetricsAPI.h  MetadataAPI.c  MetadataAPI.h  MetricsAPI.c  MetricsAPI.h  MetricsV1API.c  MetricsV1API.h  MetricsV2API.c  MetricsV2API.h  OhlcvAPI.c  OhlcvAPI.h  OptionsAPI.c  OptionsAPI.h  OrderBookAPI.c  OrderBookAPI.h  OrderBookL3API.c  OrderBookL3API.h  QuotesAPI.c  QuotesAPI.h  TradesAPI.c  TradesAPI.h
coinapi/market-data-api-rest/sdk/c/docs/: ExchangeRatesAPI.md  ExternalMetricsAPI.md  MetadataAPI.md  MetricsAPI.md  MetricsV1API.md  MetricsV2API.md  OhlcvAPI.md  OptionsAPI.md  OrderBookAPI.md  OrderBookL3API.md  QuotesAPI.md  TradesAPI.md  models_exchange_timeseries_item.md  options_option_exchange_group.md  options_strike.md  v1_chain.md  v1_exchange.md  v1_exchange_rate.md  v1_external_asset.md  v1_external_exchange.md  v1_general_data.md  v1_last_trade.md  v1_listing_item.md  v1_metric.md  v1_metric_data.md  v1_metric_info.md  v1_order_book.md  v1_order_book_base.md  v1_order_book_depth.md  v1_quote.md  v1_quote_trade.md  v1_symbol.md  v1_symbol_mapping.md  v1_timeseries_item.md  v1_trade.md
coinapi/market-data-api-rest/sdk/c/model/: models_exchange_timeseries_item.c  models_exchange_timeseries_item.h  options_option_exchange_group.c  options_option_exchange_group.h  options_strike.c  options_strike.h  v1_asset.c  v1_chain.c  v1_chain.h  v1_exchange.c  v1_exchange.h  v1_exchange_rate.h  v1_exchange_rates_timeseries_item.c  v1_exchange_rates_timeseries_item.h  v1_external_asset.c  v1_external_asset.h  v1_external_exchange.c  v1_external_exchange.h  v1_general_data.c  v1_general_data.h  v1_icon.c  v1_last_trade.c  v1_last_trade.h  v1_listing_item.c  v1_listing_item.h  v1_metric.c  v1_metric.h  v1_metric_data.c  v1_metric_data.h  v1_metric_info.c  v1_metric_info.h  v1_order_book.c  v1_order_book.h  v1_order_book_base.c  v1_order_book_base.h  v1_order_book_depth.c  v1_order_book_depth.h  v1_quote.c  v1_quote.h  v1_quote_trade.c  (+9 more)
coinapi/market-data-api-rest/sdk/c/src/: apiClient.c
coinapi/market-data-api-rest/sdk/c/unit-test/: test_models_exchange_timeseries_item.c  test_options_option_exchange_group.c  test_options_strike.c  test_v1_chain.c  test_v1_chain_network_address.c  test_v1_exchange.c  test_v1_exchange_rates_timeseries_item.c  test_v1_external_asset.c  test_v1_external_exchange.c  test_v1_general_data.c  test_v1_icon.c  test_v1_last_trade.c  test_v1_listing_item.c  test_v1_metric.c  test_v1_metric_data.c  test_v1_metric_info.c  test_v1_order_book.c  test_v1_order_book_base.c  test_v1_order_book_depth.c  test_v1_quote.c  test_v1_quote_trade.c  test_v1_symbol.c  test_v1_symbol_mapping.c  test_v1_timeseries_item.c  test_v1_trade.c
coinapi/market-data-api-rest/spec/: openapi.json  openapi.yaml
coinapi/market-data-api/spec/: coinapi-market-data-rest.json  coinapi-market-data-rest.yaml  coinapi-marketdata-rest.json  coinapi-marketdata-rest.yaml
cryptotick-samples/limitbook_full_to_snapshot_50/: limitbook_full_to_snapshot_50.py
data-api/: coinapi-marketdata-rest.yaml
data-api/csharp-fix-v2/: README.md  config_nossl.cfg  config_ssl.cfg
finfeedapi/sec-api/sdk/: setup.py  (+5 more)
flatfiles-data-push-api/: openapi.yaml
flatfiles-data-push-api/openapi.yaml/: swagger.yaml
indexes-api/: coinapi-indexes-rest.yaml
openapi/: exchange-rates-api-historical.yaml  exchange-rates-api-realtime.yaml
sdk/bash/: Dockerfile  client.sh.bash-completion
sdk/eiffel/: api_client.ecf
sdk/go/: README.md  api_content_extraction.go  configuration.go  model_mvc_validation_problem_details.go
sdk/groovy/: README.md
sdk/typescript-angular/: api.base.service.ts
(+11158 files in other folders)
